styles (banner) fix title spacing

--- a/src/components/banner/banner.less
+++ b/src/components/banner/banner.less
@@ -90,10 +90,10 @@
 					color: @color-text;
 					padding: 15px 0;
 					margin-bottom: 10px;
-
+					line-height: 28px;
+					
 					@media @smartphone {
 						font-size: 28px;
-						line-height: inherit;
 						font-weight: bold;
 					}
 				}
